# grassmarket

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  KICKOFF-PROMPT.md  LOOP-1-PROMPT.md  Procfile  README.md  REVIEW-PROMPT.md  alembic.ini  pyproject.toml  railway.toml
docs/: ATLAS-Feasibility-Deep-Dive-v1.md  ATLAS-Methodology-Guide.md  ATLAS-Methodology-v1.1.md  ATLAS-Methodology-v1.2.md  ATLAS-Methodology-v1.3.md  ATLAS-Methodology-v1.4.md  ATLAS-Methodology-v1.5.md  ATLAS-Methodology-v1.md  Advisor-Guide-to-ATLAS.md  BACKLOG.md  ESTATE-RECONCILIATION.md  Grassmarket-PRD-v2.md  METHODOLOGY-V2-SCOPE.md  NEXT-STEPS-2026-07.md  PENDING-FOUNDER-REVIEW.md  phase-2-seams.md
fixtures/: golden-master.xlsx
frontend/: .env.local.example  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
migrations/: env.py
reports/: brokerage-e2e-staging-2026-07-21.md  mock-advisor-full-remeasure-2026-07-20.md  mock-advisor-remeasure-and-outstanding-2026-07-20.md  mock-advisor-rerun-measurement-2026-07-19.md  mock-advisor-staging-rerun-2026-07-22.md  mock-advisor-stress-test-2026-07-19.md  product-confidence-staging-2026-07-20.md  shift-2026-07-13.md  ui-gate-2026-07-14.md
scripts/: build_golden_master.py  generate_schemas.py  prod_smoke.py  regen_golden_master_json.py  secret_scan.py  seed_academy.py  seed_demo.py  seed_dev.py  validate_contracts.py
tests/: _atlas_inputs.py  certification_helpers.py  committee_helpers.py  conftest.py  dual_rating_helpers.py  test_academy_courses.py  test_academy_drill_loop.py  test_academy_learner.py  test_academy_seed.py  test_arena.py  test_arena_scoring.py  test_assessment_lifecycle.py  test_atlas_engine_golden_master.py  test_atlas_engine_golden_master_v2.py  test_atlas_engine_properties.py  test_atlas_montecarlo.py  test_auth_flow.py  test_auth_refresh.py  test_bench_http.py  test_bench_scoring.py  test_benzinga_course.py  test_brandfetch_course.py  test_brokerage_portfolio.py  test_c_benchmark.py  test_c_capture.py  test_c_deliverable.py  test_c_engine.py  test_c_registry.py  test_c_rubric_anchors.py  test_calibration.py  test_calibration_stats.py  (+63 more)
(+481 files in other folders)
