[project]
name = "grassmarket"
version = "0.0.1"
description = "Grassmarket — Bruntsfield Advisor Studio: the advisor platform for the Bruntsfield Advisory Network (pipeline, ATLAS assessment engine, deliverables, earnings, Workbench)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Shared contracts (local workspace package) — the future Holy Corner API surface.
    "bcap-contracts",
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    # Persistence
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    # Contracts / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "python-dotenv>=1.0",
    # Auth
    "pyjwt>=2.8",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pyright>=1.1",
    "pre-commit>=3.7",
    "httpx>=0.27",
    # Golden-master workbook authoring (GRS-0003): live-formula xlsx + JSON export.
    "openpyxl>=3.1.5",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
bcap-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grassmarket"]

# --- Tool config: copied verbatim from C:\dev\SD3\pyproject.toml (SD3 engineering standard) ---

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

# FastAPI's dependency-injection idiom puts calls (Depends/Security/…) in argument defaults; they
# are immutable sentinels by design, so B008 does not apply. (SD3 has no FastAPI; this is the one
# additive rule for a web app.)
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Security",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.pyright]
include = ["src", "packages"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
